docker-compose/test-kompose_tool/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-kompose-balabannet: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: bookstore_db
            - name: MYSQL_PASSWORD
              value: Clarusway_1
            - name: MYSQL_ROOT_PASSWORD
              value: P123456p
            - name: MYSQL_USER
              value: clarusway
          image: mysql:5.7
          name: database
          resources: {}
      restartPolicy: Always
status: {}
