docker-compose/test-kompose_tool/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.service.expose: www.deryabalaban.online
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.service.expose: www.deryabalaban.online
        kompose.service.nodeport.port: "30001"
        kompose.service.type: nodeport
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-kompose-tool-balabannet: "true"
        io.kompose.service: server
    spec:
      containers:
        - image: balaban/bookstoreapi
          name: server
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
