docker-compose/test-kompose_tool/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.service.expose: www.deryabalaban.online
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "80"
      nodePort: 30001
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: server
  type: NodePort
status:
  loadBalancer: {}
