docker-compose/test-kompose_tool/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.service.expose: www.deryabalaban.online
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  rules:
    - host: www.deryabalaban.online
      http:
        paths:
          - backend:
              service:
                name: server
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
