docker-compose/test-kompose_tool/test-kompose-tool-balabannet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: test-kompose-tool-balabannet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/test-kompose-tool-balabannet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/test-kompose-tool-balabannet: "true"
